@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-03T08:27:23Z",
+  "timestamp" : "2022-10-03T16:33:25Z",
   "count_outdated" : 145,
   "uniques_outdated" : 101,
-  "count" : 151,
-  "uniques" : 107,
+  "count" : 152,
+  "uniques" : 108,
   "clones" : [
     {
       "timestamp": "2022-09-22T00:00:00Z",
@@ -42,6 +42,13 @@
     },
     {
       "timestamp": "2022-10-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
