@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 1,
+  "count": 7,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-09-22T00:00:00Z",
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2022-10-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-03T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
